correct display on mobile devices

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -11,6 +11,18 @@
       transform: translate(0, 0);
 
     }
+    .header__container {
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        @include adaptive-value("height", 110, 60, 1);
+        background-color: $whiteColor;
+        box-shadow: 0 0.3rem 1rem rgb(0 0 0 / 5%);
+      }
+    }
   }
   // .header__wrapper
   &__wrapper {
@@ -82,13 +94,13 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 200vh;
+      height: 110vh;
       visibility: hidden;
       pointer-events: none;
       transform: translate(-120%, 0);
       transition: .3s;
       background-color: $whiteColor;
-
+      overflow-y: auto;
       & .menu__body {
         height: auto;
         margin-top: 7rem;
@@ -121,6 +133,7 @@
     position: relative;
     max-width: 16rem;
     width: 100%;
+    z-index: 100;
 
     &_main {
       width: 100%;
